# EITD

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeLists2.txt  README  README.md
epi/: endianess.h  epi.h  epi_vita.cc  epi_vita.h  epi_win32.cc  epi_win32.h  exe_path.cc  filesystem_win32.cc  stb_image_write.h  types.h
quick_setup_scripts/: windows-getdeps - powershell.ps1
src/: actor.cc  actor.h  actor_list.cc  actor_list.h  aitd_box.cc  aitd_box.h  anim.cc  anim_action.cc  common.h  debug_font.cc  debugger.cc  debugger.h  e_tatou.cc  e_tatou.h  eval_var.cc  file_access.cc  filestream.cc  filestream.h  fitd.cc  fitd.h  floor.cc  floor.h  fmopl.cc  fmopl.h  font.cc  font.h  gfx.cc  gfx.h  hqr.cc  hqr.h  i_sdlinc.h  input.cc  input.h  inventory.cc  inventory.h  life.cc  life.h  life_2.cc  life_2.h  life_macro_table.cc  (+48 more)
src/common/: endian.h  stream.h  textconsole.cc
src/system/: i_main.cc  i_system.h  i_video.cc  i_x86.cc
src/system/opengl/minigl/: Makefilelib
src/system/unx/: unx_sysinc.h
src/system/vita/: vita_sysinc.h  vita_system.cc
src/system/win32/: w32_sysinc.h  w32_system.cc
win32/MSVC 2020/: EITD.vcxproj
win32/MSVC 2020/ReleaseGL + DEBUG/FITD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FITD.lastbuildstate
